// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div>
    <UnstyledLink
      title="SparkPost"
      to="https://www.sparkpost.com"
    >
      <Logo />
    </UnstyledLink>
  </div>
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
      ssoEnabled={false}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <UnstyledLink
          to="/forgot-password"
        >
          Forgot your password?
        </UnstyledLink>
      </small>
    }
  />
</div>
`;

exports[`renders correctly when there is a login error 1`] = `
<div>
  <div>
    <UnstyledLink
      title="SparkPost"
      to="https://www.sparkpost.com"
    >
      <Logo />
    </UnstyledLink>
  </div>
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Error
      error="uh oh!"
    />
    <Connect(ReduxForm)
      onSubmit={[Function]}
      ssoEnabled={false}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <UnstyledLink
          to="/forgot-password"
        >
          Forgot your password?
        </UnstyledLink>
      </small>
    }
  />
</div>
`;

exports[`should display tfa form when TFA is enabled 1`] = `
<div>
  <div>
    <UnstyledLink
      title="SparkPost"
      to="https://www.sparkpost.com"
    >
      <Logo />
    </UnstyledLink>
  </div>
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <UnstyledLink
          to="/forgot-password"
        >
          Forgot your password?
        </UnstyledLink>
      </small>
    }
  />
</div>
`;
